--- a/desarrollo web/scss/@media/_mediaqueris.scss
+++ b/desarrollo web/scss/@media/_mediaqueris.scss
@@ -45,12 +45,12 @@
     /*estilo contacto*/
     .contenedor__imagen__contacto {
         .texto__imagen__contacto {
-            height: 200%;
+            height: 185%;
             left: 45%;
             transform: translate(-50%, -50%);
             h2 {
                 width: 125%;
-                font-size: 21px;
+                font-size: 19px;
                 color: rgb(110 109 106);
             }
         }
@@ -314,7 +314,7 @@
     .servicios__tratamientos {
         .servicios__tratamiento__imagen__online {
             display: flex;
-            flex-direction: column;
+            flex-direction: row-reverse;
             justify-content: center;
             align-items: center;
             width: 100%;
@@ -360,7 +360,7 @@
         margin-bottom: 5%;
     }
     .estructura__index__cartones {
-        display: block;
+        display: flex;
     }
     .cualidades {
         flex-wrap: wrap;
@@ -476,9 +476,11 @@
         margin: 6%;
     }
     .servicios__tratamientos {
+        display: flex;
+        flex-direction: row-reverse;
         .servicios__tratamiento__imagen__online {
             display: flex;
-            flex-direction: column;
+            flex-direction: row-reverse;
             justify-content: center;
             align-items: center;
             width: 100%;
