--- a/desarrollo web/scss/kine-online/_kine-online.scss
+++ b/desarrollo web/scss/kine-online/_kine-online.scss
@@ -14,6 +14,7 @@
 
 .servicios__tratamientos {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
     margin: 2%;
