--- a/desarrollo web/css/estilo.css
+++ b/desarrollo web/css/estilo.css
@@ -1142,7 +1142,7 @@ footer {
 
 .servicios__tratamientos {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 2%;
