--- a/desarrollo web/scss/kine-online/_kine-online.scss
+++ b/desarrollo web/scss/kine-online/_kine-online.scss
@@ -14,7 +14,7 @@
 
 .servicios__tratamientos {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 2%;
