--- a/desarrollo web/scss/@media/_mediaqueris.scss
+++ b/desarrollo web/scss/@media/_mediaqueris.scss
@@ -477,7 +477,7 @@
     }
     .servicios__tratamientos {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: row;
         .servicios__tratamiento__imagen__online {
             display: flex;
             flex-direction: row-reverse;
