--- a/desarrollo web/css/estilo.css
+++ b/desarrollo web/css/estilo.css
@@ -56,9 +56,13 @@ header .navbar .container-fluid :hover {
   display: block;
 }
 
-.imagen__principal__cabecera {
+.imagen__principal__cabecera, .contenedor__imagen__contacto {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   width: 100%;
-  height: 30%;
+  height: 300px;
 }
 
 .contenedor_grid {
@@ -592,12 +596,12 @@ footer {
   }
   /* página contacto*/
   .contenedor__imagen__contacto .texto__imagen__contacto {
-    height: 175%;
+    height: 170%;
     left: 45%;
     transform: translate(-50%, -50%);
   }
   .contenedor__imagen__contacto .texto__imagen__contacto h2 {
-    width: 125%;
+    width: 120%;
     font-size: 22px;
     color: rgb(110, 109, 106);
   }
@@ -768,12 +772,12 @@ footer {
   }
   /* estilo contacto*/
   .contenedor__imagen__contacto .texto__imagen__contacto {
-    height: 185%;
+    height: 165%;
     left: 45%;
     transform: translate(-50%, -50%);
   }
   .contenedor__imagen__contacto .texto__imagen__contacto h2 {
-    width: 135%;
+    width: 100%;
     font-size: 31px;
     color: rgb(110, 109, 106);
   }
@@ -837,6 +841,121 @@ footer {
     text-align: justify;
   }
 }
+h1 {
+  font-size: 3rem;
+  color: aliceblue;
+  background-color: rgb(127, 161, 255);
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+h2 {
+  font-size: 2rem;
+  color: aliceblue;
+  text-align: center;
+  margin-top: 5%;
+}
+
+/*  estilo header */
+header {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  width: 30%;
+}
+
+#logo_principal {
+  width: 40%;
+}
+
+header .navbar {
+  width: 100%;
+}
+header .navbar .container-fluid {
+  width: 100%;
+}
+header .navbar .container-fluid a {
+  color: rgb(127, 161, 255);
+  font-size: x-large;
+}
+header .navbar .container-fluid :hover {
+  font-weight: bold;
+  color: rgb(127, 161, 255);
+}
+
+.imagen__principal {
+  display: block;
+}
+
+.imagen__principal__cabecera, .contenedor__imagen__contacto {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  width: 100%;
+  height: 300px;
+}
+
+.contenedor_grid {
+  background-color: aliceblue;
+  color: rgba(13, 78, 164, 0.142);
+}
+
+/* pie de pagina*/
+footer {
+  display: grid;
+  margin: 2%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-areas: "texto imagenes redes" "texto  imagenes redes" "texto imagenes redes" "texto  imagenes redes";
+}
+
+.pie__pagina__texto {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  grid-area: texto;
+  font-size: medium;
+}
+
+.pie__imagenes {
+  width: 50%;
+  grid-area: imagenes;
+  gap: 20px;
+  margin-left: 20%;
+  margin-top: 2%;
+  font-size: 10px;
+}
+
+.pie__redes {
+  grid-area: redes;
+}
+.pie__redes a img {
+  width: 40px;
+}
+
+.pie__imagenes img {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  margin-left: 20%;
+  margin-bottom: 5px;
+}
+.pie__imagenes img:hover {
+  transform: scale(1.2, 1.2);
+}
+
+.pie__redes a img {
+  width: 40px;
+  font-size: small;
+}
+.pie__redes a img:hover {
+  transform: scale(1.2, 1.2);
+}
+
 .contenedor__imagen__contacto {
   display: inline-block;
   position: relative;
@@ -845,28 +964,44 @@ footer {
 .contenedor__imagen__contacto .texto__imagen__contacto {
   position: absolute;
   text-align: center;
-  height: 160%;
+  height: 180%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .contenedor__imagen__contacto .texto__imagen__contacto h2 {
-  width: 125%;
-  font-size: 50px;
+  width: 100%;
+  font-size: 36px;
   color: rgb(110, 109, 106);
 }
 
-.formulario__contacto {
+.formulario {
   display: flex;
-  background-color: rgb(241, 240, 238);
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: auto;
 }
-.formulario__contacto .formContacto {
-  width: 60%;
+.formulario form {
+  width: 45%;
+  margin-right: 2%;
 }
-.formulario__contacto .formulario__ubicaciones {
+.formulario form div .form-label {
+  color: blue;
+}
+.formulario form buttom {
+  color: blue;
+}
+.formulario .ubicacion {
   width: 40%;
-  display: block;
-  margin-left: 20%;
-  margin-bottom: 3%;
+  padding-left: 2%;
+}
+.formulario .ubicacion p {
+  color: blue;
+  font-size: large;
+}
+.formulario .ubicacion p i span {
+  padding-left: 10px;
 }
 
 /* estilo faqs */
@@ -1065,9 +1200,13 @@ header .navbar .container-fluid :hover {
   display: block;
 }
 
-.imagen__principal__cabecera {
+.imagen__principal__cabecera, .contenedor__imagen__contacto {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   width: 100%;
-  height: 30%;
+  height: 300px;
 }
 
 .contenedor_grid {
@@ -1441,12 +1580,12 @@ footer {
   }
   /* página contacto*/
   .contenedor__imagen__contacto .texto__imagen__contacto {
-    height: 175%;
+    height: 170%;
     left: 45%;
     transform: translate(-50%, -50%);
   }
   .contenedor__imagen__contacto .texto__imagen__contacto h2 {
-    width: 125%;
+    width: 120%;
     font-size: 22px;
     color: rgb(110, 109, 106);
   }
@@ -1617,12 +1756,12 @@ footer {
   }
   /* estilo contacto*/
   .contenedor__imagen__contacto .texto__imagen__contacto {
-    height: 185%;
+    height: 165%;
     left: 45%;
     transform: translate(-50%, -50%);
   }
   .contenedor__imagen__contacto .texto__imagen__contacto h2 {
-    width: 135%;
+    width: 100%;
     font-size: 31px;
     color: rgb(110, 109, 106);
   }
