--- a/desarrollo web/scss/_general.scss
+++ b/desarrollo web/scss/_general.scss
@@ -49,8 +49,10 @@
         }
         
         .imagen__principal__cabecera {
+            object-fit: cover;
+            object-position: center;
             width: 100%;
-            height: 30%;
+            height: 300px;
         }
         
         .contenedor_grid {
